<resources>
    <string name="app_name">GymApp</string>
    <string name="exercise_list_button_text">Lista Exercicios</string>
    <string name="plan_list_button_text">Lista Planos</string>
    <string name="associate_button_text">Associar Exercicios a um Plano</string>
    <string name="plan_activity_main_text">Plan Activity</string>
    <string name="exercise_activity_main_text">Exercise Activity</string>
    <string name="text_add_button">+</string>
    <string name="dialog_exercise_name">Exercise Name</string>
    <string name="dialog_link_for_video_optional">Link for video (Optional)</string>
    <string name="dialog_link_for_gif_optional">Link for GIF (Optional)</string>
    <string name="dialog_notes_for_this_exercise_optional">Notes for this exercise (Optional)</string>
    <string name="default_text_exercise_gif">Exercise GIF</string>
    <string name="edit_button_text">Edit</string>
    <string name="delete_button_text">Delete</string>
    <string name="see_exercise_button_text">See exercises in this  plan</string>
    <string name="dialog_plan_name">Plan Name</string>
    <string name="associate_activity_main_text">Associate Activity</string>
    <string name="add_exercises_to_workout_plan_button_text">Add Exercises to work out Plan</string>
    <string name="plan_exercises">Plan Exercises</string>


</resources>