<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    >

    <EditText
        android:id="@+id/dialogExerciseName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_exercise_name"
        android:importantForAutofill="no"
        android:inputType="textCapWords"
        android:layout_marginBottom="12dp" />

    <EditText
        android:id="@+id/dialogExerciseVideo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_link_for_video_optional"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:layout_marginBottom="12dp"
        />

    <EditText
        android:id="@+id/dialogExerciseGIF"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dialog_link_for_gif_optional"
        android:importantForAutofill="no"
        android:inputType="textUri"
        android:layout_marginBottom="12dp"/>

    <EditText
        android:id="@+id/dialogExerciseNotes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/dialog_notes_for_this_exercise_optional"
        android:inputType="textAutoCorrect" />

</LinearLayout>