<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <Button
        android:id="@+id/planListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue_sapphire"
        android:textColor="@color/white"
        android:text="@string/plan_list_button_text"
        app:layout_constraintBottom_toTopOf="@+id/exerciseListButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent="0.5"

        />

    <Button
        android:id="@+id/exerciseListButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="356dp"
        android:backgroundTint="@color/blue_sapphire"
        android:text="@string/exercise_list_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent="0.5" />

    <Button
        android:id="@+id/associateButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="73dp"
        android:layout_marginBottom="116dp"
        android:backgroundTint="@color/blue_sapphire"
        android:text="@string/associate_button_text"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/exerciseListButton"
        app:layout_constraintWidth_percent="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>